Scrum 126 backend create SupervisionRequests endpoint (#96)
